--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Diversao</title>
-    <link rel="icon" href="https://static.wixstatic.com/media/2566ff_d5a8501dd3304550ba9e48ca321ae4f6~mv2.jpg">
+    <link rel="icon" href="https://static.wixstatic.com/media/475076_1f46f86297e84027b6f19561b58586ab~mv2.jpg">
 </head>
 <style>
 video::cue {
@@ -48,7 +48,7 @@ font-weight: bold;
         
         
         <div class="content"></div>
-        <video  controls poster="mg2.jpg" id="vid1564730217"s src="https://dls7rxd829s2x.cloudfront.net/data/7/6f023fc7.mp4" controls crossorigin="">
+        <video  controls poster="img.jpg" id="vid1564730217"s src="//dls7rxd829s2x.cloudfront.net/data/0/3fc2dd00.mp4" controls crossorigin="">
             <track kind="subtitles" src="https://raw.githubusercontent.com/jansenflix/trabalho1/main/lgenda.srt.vtt" srclang="en" label="original" default>
             <track kind="subtitles" src="" srclang="pt" label="Português"> 
             <track kind="subtitles" src="" srclang="en" label="Inglês">     
